--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dynamic = ["version"]
+
 dependencies = [
     "colorama>=0.3.9",
     "configobj>=5.0.6",
@@ -36,7 +37,7 @@ dependencies = [
     "dpath<3,>=2.1.0",
     "dvc-data>=2.22.0,<2.23.0",
     "dvc-http>=2.29.0",
-    "dvc-render>=0.3.1,<1",
+    "dvc-render@git+https://github.com/iterative/dvc-render@refs/pull/142/head",
     "dvc-studio-client>=0.13.0,<1",
     "dvc-task>=0.3.0,<1",
     "flatten_dict<1,>=0.4.1",
